# line_cracker

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
tests/: cli.rs
tests/data/: lorum_ipsum.txt
